# lithium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SESSION-CONTEXT.md  features.json
crates/lithium-anthropic/: Cargo.toml
crates/lithium-anthropic/src/: admin_api.rs  claude_code.rs  lib.rs
crates/lithium-cli/: Cargo.toml
crates/lithium-cli/src/: main.rs
crates/lithium-cli/src/cmd/: adapters.rs  config_cmd.rs  doctor.rs  init.rs  mod.rs  month.rs  poll.rs  today.rs
crates/lithium-core/: Cargo.toml
crates/lithium-core/src/: config.rs  error.rs  lib.rs  projection.rs  storage.rs  types.rs
crates/lithium-openai/: Cargo.toml
crates/lithium-openai/src/: lib.rs
crates/lithium-openrouter/: Cargo.toml
crates/lithium-openrouter/src/: lib.rs
demo/: lithium-demo.tape  seed-fixture.sh
docs/: ADAPTER-CONTRACT.md  HERO-IMAGE-PROMPT.md  PHASE-1-HANDOFF.md  SPEC-PHASE-1.md
