[workspace]
resolver = "2"
members = [
    "crates/lithium-core",
    "crates/lithium-anthropic",
    "crates/lithium-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Shawn Petros"]
license = "MIT"
repository = "https://github.com/shawnpetros/lithium"
homepage = "https://github.com/shawnpetros/lithium"
rust-version = "1.80"

[workspace.dependencies]
# error handling
anyhow = "1.0"
thiserror = "1.0"

# async runtime
tokio = { version = "1.42", features = ["full"] }

# http client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# storage
rusqlite = { version = "0.32", features = ["bundled"] }

# time
chrono = { version = "0.4", features = ["serde"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# paths
directories = "5.0"

# testing
wiremock = "0.6"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"

# internal
lithium-core = { path = "crates/lithium-core" }
lithium-anthropic = { path = "crates/lithium-anthropic" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
