[package]
name = "lithium-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "lithium CLI: today, month, poll, config, adapters, doctor, init"

[[bin]]
name = "lithium"
path = "src/main.rs"

[dependencies]
lithium-core.workspace = true
lithium-anthropic.workspace = true
lithium-openai.workspace = true
lithium-openrouter.workspace = true
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
